After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745554 - textoverlay: text position and size not recalculated when stream resolution change
textoverlay: text position and size not recalculated when stream resolution c...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Linux
: Normal normal
: 1.4.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-03 19:10 UTC by Xavier Claessens
Modified: 2015-03-03 22:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Test stream that starts 480p and then change to 1080p (990.67 KB, video/mpeg)
2015-03-03 20:36 UTC, Nicolas Dufresne (ndufresne)
Details

Description Xavier Claessens 2015-03-03 19:10:48 UTC
My stream starts with as 480p and textoverlay (all properties to default value, except for "text") display correctly text on it. Then my stream change to 1080p and the text becomes really small and not in the bottom anymore.
Comment 1 Nicolas Dufresne (ndufresne) 2015-03-03 20:36:09 UTC
Created attachment 298480 [details]
Test stream that starts 480p and then change to 1080p

With this file this bug can be reproduced using:

gst-launch-1.0 filesrc location=test.ts ! decodebin ! textoverlay text="Allo les amis !" ! glimagesink
Comment 2 Nicolas Dufresne (ndufresne) 2015-03-03 21:39:23 UTC
commit ace35b78ee81311983fc3f87a2480d188b297045
Author: Nicolas Dufresne <nicolas.dufresne@collabora.com>
Date:   Tue Mar 3 16:36:20 2015 -0500

    textoverlay: Re-render if video size changed
    
    https://bugzilla.gnome.org/show_bug.cgi?id=745554


Should I backport to 1.4 ?
Comment 3 Tim-Philipp Müller 2015-03-03 22:13:39 UTC
> Should I backport to 1.4 ?

Why not, seems pretty low risk.
Comment 4 Nicolas Dufresne (ndufresne) 2015-03-03 22:48:31 UTC
commit 0f38f220e72a74a06c2974f3cbccf1d00682d75d
Author: Nicolas Dufresne <nicolas.dufresne@collabora.com>
Date:   Tue Mar 3 16:36:20 2015 -0500

    textoverlay: Re-render if video size changed
    
    https://bugzilla.gnome.org/show_bug.cgi?id=745554