textoverlay: Re-render if video size changed

https://bugzilla.gnome.org/show_bug.cgi?id=745554